// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepIndemnite /> should render cdd indemnite with conventional provision message 1`] = `
<div>
  <h2
    class="sc-grxQYx eCIiBz"
  >
    Montant
  </h2>
  <p>
    La prime d'intervention
     est estimée à : 
    <strong
      class="sc-ZqGJI sc-knEsKG ffvloy fGMJJt"
    >
      180
       €
    </strong>
    .
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt libwqv sc-cOxWqc ioxulQ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. 
          </strong>
        </li>
        <li>
          Total des salaires
           : 
          <strong>
            3000
          </strong>
        </li>
      </ul>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Formule
      </h2>
      <div
        class="sc-kiPvrU gFAgPX"
      >
        <div
          style="overflow: auto;"
        >
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math
                  display="block"
                  xmlns="http://www.w3.org/1998/Math/MathML"
                >
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mn>
                          6
                        </mn>
                        <mn>
                          100
                        </mn>
                      </mfrac>
                      <mo>
                        ×
                      </mo>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        o
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        S
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        i
                      </mi>
                      <mi>
                        r
                      </mi>
                      <mi>
                        e
                      </mi>
                      <mi>
                        s
                      </mi>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{6}{100} \\times "totalSalaires"
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:2.0074em;vertical-align:-0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:1.3214em;"
                          >
                            <span
                              style="top:-2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  100
                                </span>
                              </span>
                            </span>
                            <span
                              style="top:-3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width:0.04em;"
                              />
                            </span>
                            <span
                              style="top:-3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  6
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:0.686em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                  <span
                    class="mbin"
                  >
                    ×
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                </span>
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:0.6944em;"
                  />
                  <span
                    class="mord"
                  >
                    "
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    o
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.05764em;"
                  >
                    lS
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.01968em;"
                  >
                    l
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    ai
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    res
                  </span>
                  <span
                    class="mord"
                  >
                    "
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Chapitre III : Contrat d'intervention à durée déterminée de l'accord du 5 juillet 2001 relatif au statut des salariés du secteur d'activité d'organisation des foires, salons et congrès (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005851689&cidTexte=KALITEXT000005679946&dateTexte=20190918"
            rel="noopener noreferrer"
            target="_blank"
          >
            Chapitre III : Contrat d'intervention à durée déterminée de l'accord du 5 juillet 2001 relatif au statut des salariés du secteur d'activité d'organisation des foires, salons et congrès
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-8 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-8 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-9 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-9 du code du travail
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-dkKxlM hrCOuh elwyYc"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-gJFNMl bnuSNt"
        >
          Attention il peut exister un montant plus favorable
        </p>
      </div>
    </div>
    <p>
      Un accord d’entreprise peut prévoir un montant différent qu’il soit plus élevé ou plus faible. Dans ce cas, s’applique le montant prévu par l’accord d’entreprise, sauf si le contrat de travail prévoit un montant plus favorable pour le salarié.
    </p>
  </div>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      aria-label="salarié en CDD (nouvelle fenêtre)"
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render cdd indemnite with no ccn message 1`] = `
<div>
  <h2
    class="sc-grxQYx eCIiBz"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à : 
    <strong
      class="sc-ZqGJI sc-knEsKG ffvloy fGMJJt"
    >
      300
       €
    </strong>
    .
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt libwqv sc-cOxWqc ioxulQ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            La convention collective n'a pas été renseignée.
          </strong>
        </li>
        <li>
          Total des salaires
           : 
          <strong>
            3000
          </strong>
        </li>
      </ul>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Formule
      </h2>
      <div
        class="sc-kiPvrU gFAgPX"
      >
        <div
          style="overflow: auto;"
        >
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math
                  display="block"
                  xmlns="http://www.w3.org/1998/Math/MathML"
                >
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mn>
                          10
                        </mn>
                        <mn>
                          100
                        </mn>
                      </mfrac>
                      <mo>
                        ×
                      </mo>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        o
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        S
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        i
                      </mi>
                      <mi>
                        r
                      </mi>
                      <mi>
                        e
                      </mi>
                      <mi>
                        s
                      </mi>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{10}{100} \\times "totalSalaires"
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:2.0074em;vertical-align:-0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:1.3214em;"
                          >
                            <span
                              style="top:-2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  100
                                </span>
                              </span>
                            </span>
                            <span
                              style="top:-3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width:0.04em;"
                              />
                            </span>
                            <span
                              style="top:-3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  10
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:0.686em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                  <span
                    class="mbin"
                  >
                    ×
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                </span>
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:0.6944em;"
                  />
                  <span
                    class="mord"
                  >
                    "
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    o
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.05764em;"
                  >
                    lS
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.01968em;"
                  >
                    l
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    ai
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    res
                  </span>
                  <span
                    class="mord"
                  >
                    "
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article L1243-8 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-8 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-9 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-9 du code du travail
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-dkKxlM hrCOuh elwyYc"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-gJFNMl bnuSNt"
        >
          Attention il peut exister un montant plus favorable
        </p>
      </div>
    </div>
    <p>
      Une convention collective de branche étendue ou un accord d’entreprise peut prévoir un montant différent qu’il soit plus élevé ou plus faible que celui prévu par le code du travail.
    </p>
    <p>
      Attention, dans le cas où la convention ou l’accord collectif prévoit un taux inférieur à 10% dans la limite de 6%, il doit y avoir des contreparties offertes au salarié, notamment sous la forme d’un accès privilégié à la formation professionnelle (action de formation, bilan de compétences). Dans tous les cas, le contrat de travail peut prévoir un montant plus favorable pour le salarié. Il faut alors appliquer ce montant.
    </p>
  </div>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      aria-label="salarié en CDD (nouvelle fenêtre)"
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render cdd indemnite with no conventional provision message 1`] = `
<div>
  <h2
    class="sc-grxQYx eCIiBz"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à : 
    <strong
      class="sc-ZqGJI sc-knEsKG ffvloy fGMJJt"
    >
      300
       €
    </strong>
    .
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt libwqv sc-cOxWqc ioxulQ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.
          </strong>
        </li>
        <li>
          Total des salaires
           : 
          <strong>
            3000
          </strong>
        </li>
      </ul>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Formule
      </h2>
      <div
        class="sc-kiPvrU gFAgPX"
      >
        <div
          style="overflow: auto;"
        >
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math
                  display="block"
                  xmlns="http://www.w3.org/1998/Math/MathML"
                >
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mn>
                          10
                        </mn>
                        <mn>
                          100
                        </mn>
                      </mfrac>
                      <mo>
                        ×
                      </mo>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        o
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        S
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        i
                      </mi>
                      <mi>
                        r
                      </mi>
                      <mi>
                        e
                      </mi>
                      <mi>
                        s
                      </mi>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{10}{100} \\times "totalSalaires"
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:2.0074em;vertical-align:-0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:1.3214em;"
                          >
                            <span
                              style="top:-2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  100
                                </span>
                              </span>
                            </span>
                            <span
                              style="top:-3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width:0.04em;"
                              />
                            </span>
                            <span
                              style="top:-3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  10
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:0.686em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                  <span
                    class="mbin"
                  >
                    ×
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                </span>
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:0.6944em;"
                  />
                  <span
                    class="mord"
                  >
                    "
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    o
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.05764em;"
                  >
                    lS
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.01968em;"
                  >
                    l
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    ai
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    res
                  </span>
                  <span
                    class="mord"
                  >
                    "
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article 16.03 de la convention collective (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=B2ED091AF8ACCF6952BB5EA67D9DE5AE.tplgfr27s_1?idArticle=KALIARTI000005787408&cidTexte=KALITEXT000029787837&dateTexte=29990101&categorieLien=id"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article 16.03 de la convention collective
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-8 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-8 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-9 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-9 du code du travail
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-dkKxlM hrCOuh elwyYc"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-gJFNMl bnuSNt"
        >
          Attention il peut exister un montant plus favorable
        </p>
      </div>
    </div>
    <p>
      Un accord d’entreprise peut prévoir un montant différent qu’il soit plus élevé ou plus faible. Dans ce cas, s’applique le montant prévu par l’accord d’entreprise, sauf si le contrat de travail prévoit un montant plus favorable pour le salarié.
    </p>
    <p>
      Attention, dans le cas où l’accord d’entreprise prévoit un taux inférieur à 10% dans la limite de 6%, il doit y avoir des contreparties offertes au salarié, notamment sous la forme d’un accès privilégié à la formation professionnelle (action de formation, bilan de compétences).
    </p>
  </div>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      aria-label="salarié en CDD (nouvelle fenêtre)"
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render cdd indemnite with unhandled cc message 1`] = `
<div>
  <h2
    class="sc-grxQYx eCIiBz"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à : 
    <strong
      class="sc-ZqGJI sc-knEsKG ffvloy fGMJJt"
    >
      300
       €
    </strong>
    .
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt libwqv sc-cOxWqc ioxulQ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            La convention collective n'a pas été traitée par nos services.
          </strong>
        </li>
        <li>
          Total des salaires
           : 
          <strong>
            3000
          </strong>
        </li>
      </ul>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Formule
      </h2>
      <div
        class="sc-kiPvrU gFAgPX"
      >
        <div
          style="overflow: auto;"
        >
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math
                  display="block"
                  xmlns="http://www.w3.org/1998/Math/MathML"
                >
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mn>
                          10
                        </mn>
                        <mn>
                          100
                        </mn>
                      </mfrac>
                      <mo>
                        ×
                      </mo>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        o
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        S
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        i
                      </mi>
                      <mi>
                        r
                      </mi>
                      <mi>
                        e
                      </mi>
                      <mi>
                        s
                      </mi>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{10}{100} \\times "totalSalaires"
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:2.0074em;vertical-align:-0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:1.3214em;"
                          >
                            <span
                              style="top:-2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  100
                                </span>
                              </span>
                            </span>
                            <span
                              style="top:-3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width:0.04em;"
                              />
                            </span>
                            <span
                              style="top:-3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  10
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:0.686em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                  <span
                    class="mbin"
                  >
                    ×
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                </span>
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:0.6944em;"
                  />
                  <span
                    class="mord"
                  >
                    "
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    o
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.05764em;"
                  >
                    lS
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.01968em;"
                  >
                    l
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    ai
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    res
                  </span>
                  <span
                    class="mord"
                  >
                    "
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article L1243-8 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-8 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-9 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-9 du code du travail
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-dkKxlM hrCOuh elwyYc"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-gJFNMl bnuSNt"
        >
          Attention il peut exister un montant plus favorable
        </p>
      </div>
    </div>
    <p>
      Une convention collective de branche étendue ou un accord d’entreprise peut prévoir un montant différent qu’il soit plus élevé ou plus faible que celui prévu par le code du travail.
    </p>
    <p>
      Attention, dans le cas où la convention ou l’accord collectif prévoit un taux inférieur à 10% dans la limite de 6%, il doit y avoir des contreparties offertes au salarié, notamment sous la forme d’un accès privilégié à la formation professionnelle (action de formation, bilan de compétences). Dans tous les cas, le contrat de travail peut prévoir un montant plus favorable pour le salarié. Il faut alors appliquer ce montant.
    </p>
  </div>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      aria-label="salarié en CDD (nouvelle fenêtre)"
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render ctt indemnite 1`] = `
<div>
  <h2
    class="sc-grxQYx eCIiBz"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à : 
    <strong
      class="sc-ZqGJI sc-knEsKG ffvloy fGMJJt"
    >
      300
       €
    </strong>
    .
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt libwqv sc-cOxWqc ioxulQ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            La convention collective n'a pas été renseignée.
          </strong>
        </li>
        <li>
          Total des salaires
           : 
          <strong>
            3000
          </strong>
        </li>
      </ul>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Formule
      </h2>
      <div
        class="sc-kiPvrU gFAgPX"
      >
        <div
          style="overflow: auto;"
        >
          <span
            class="katex-display"
          >
            <span
              class="katex"
            >
              <span
                class="katex-mathml"
              >
                <math
                  display="block"
                  xmlns="http://www.w3.org/1998/Math/MathML"
                >
                  <semantics>
                    <mrow>
                      <mfrac>
                        <mn>
                          10
                        </mn>
                        <mn>
                          100
                        </mn>
                      </mfrac>
                      <mo>
                        ×
                      </mo>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        o
                      </mi>
                      <mi>
                        t
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        S
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        l
                      </mi>
                      <mi>
                        a
                      </mi>
                      <mi>
                        i
                      </mi>
                      <mi>
                        r
                      </mi>
                      <mi>
                        e
                      </mi>
                      <mi>
                        s
                      </mi>
                      <mi
                        mathvariant="normal"
                      >
                        "
                      </mi>
                    </mrow>
                    <annotation
                      encoding="application/x-tex"
                    >
                      \\frac{10}{100} \\times "totalSalaires"
                    </annotation>
                  </semantics>
                </math>
              </span>
              <span
                aria-hidden="true"
                class="katex-html"
              >
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:2.0074em;vertical-align:-0.686em;"
                  />
                  <span
                    class="mord"
                  >
                    <span
                      class="mopen nulldelimiter"
                    />
                    <span
                      class="mfrac"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:1.3214em;"
                          >
                            <span
                              style="top:-2.314em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  100
                                </span>
                              </span>
                            </span>
                            <span
                              style="top:-3.23em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="frac-line"
                                style="border-bottom-width:0.04em;"
                              />
                            </span>
                            <span
                              style="top:-3.677em;"
                            >
                              <span
                                class="pstrut"
                                style="height:3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                >
                                  10
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height:0.686em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose nulldelimiter"
                    />
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                  <span
                    class="mbin"
                  >
                    ×
                  </span>
                  <span
                    class="mspace"
                    style="margin-right:0.2222em;"
                  />
                </span>
                <span
                  class="base"
                >
                  <span
                    class="strut"
                    style="height:0.6944em;"
                  />
                  <span
                    class="mord"
                  >
                    "
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    o
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    t
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.05764em;"
                  >
                    lS
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    a
                  </span>
                  <span
                    class="mord mathnormal"
                    style="margin-right:0.01968em;"
                  >
                    l
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    ai
                  </span>
                  <span
                    class="mord mathnormal"
                  >
                    res
                  </span>
                  <span
                    class="mord"
                  >
                    "
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
      <h2
        class="sc-grxQYx eCIiBz"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article L1243-8 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-8 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Article L1243-9 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
            rel="noopener noreferrer"
            target="_blank"
          >
            Article L1243-9 du code du travail
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-dkKxlM hrCOuh elwyYc"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-gJFNMl bnuSNt"
        >
          Attention il peut exister un montant plus favorable
        </p>
      </div>
    </div>
    <p>
      Une convention collective de branche étendue ou un accord d’entreprise peut prévoir un montant différent qu’il soit plus élevé ou plus faible que celui prévu par le code du travail.
    </p>
    <p>
      Attention, dans le cas où la convention ou l’accord collectif prévoit un taux inférieur à 10% dans la limite de 6%, il doit y avoir des contreparties offertes au salarié, notamment sous la forme d’un accès privilégié à la formation professionnelle (action de formation, bilan de compétences). Dans tous les cas, le contrat de travail peut prévoir un montant plus favorable pour le salarié. Il faut alors appliquer ce montant.
    </p>
  </div>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      aria-label="salarié en contrat de travail temporaire (contrat d’intérim) (nouvelle fenêtre)"
      href="/fiche-service-public/contrat-de-travail-temporaire-interim"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en contrat de travail temporaire (contrat d’intérim)
    </a>
  </p>
</div>
`;
